--- a/frontend-zone/src/pages/detail/Detail.scss
+++ b/frontend-zone/src/pages/detail/Detail.scss
@@ -1,5 +1,12 @@
 @use "../../scss/" as *;
 
+.cursor-anime{
+    // cursor: -webkit-grab; cursor: grab;
+    cursor: url('../../assets/sitama_cursor.png'), auto;
+}
+// .episode-list a:hover{
+//     cursor: url('../../assets/sitama.png'), auto;
+// }
 .banner {
     height: 50vh;
     position: relative;
@@ -130,7 +137,7 @@ nav ul{overflow:hidden; overflow-y:scroll;}
 }
 .background-video{
     position: relative;
-    height: 100%;
+    height: 360px;
     width: 100%;
     right: 0px;
     top: 0px;
@@ -149,6 +156,7 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     gap: 10px;
 }
 .link-download{
+    
     padding: 0.5rem 1.5rem;
     border: 2px solid $white;
     border-radius: $border-radius;
@@ -156,7 +164,7 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     font-weight: 600;
     background-color: $body-bg;
     display: inline;
-    margin-right: 10px;
+    margin-right: 5px;
     margin-bottom: 5px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -167,6 +175,51 @@ nav ul{overflow:hidden; overflow-y:scroll;}
         height: 75%;
     }
     
+}
+.link-download-title{
+    
+    padding: 0.5rem 1.5rem;
+    
+    font-size: 0.8rem;
+    font-weight: 600;
+    display: inline;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+    @include mobile{
+        margin-right: 5px;
+        
+        height: 75%;
+    }
+    
+}
+.episode-list{
+    width: 50px;
+    height: 45px;
+    // padding: 0.5rem 1.5rem;
+    border: 2px solid $white;
+    border-radius: $border-radius;
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: $body-bg;
+    display: grid;
+    margin-right: 1px;
+    margin-bottom: 1px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+    @include mobile{
+        margin-right: 5px;
+        height: 75%;
+    }
+    
+}
+.item-eps{
+    height: 100%;
+    margin-top: 20%;
+    margin-bottom: 0;
 }
 .group-link-download{
     // display: grid;
@@ -186,10 +239,12 @@ nav ul{overflow:hidden; overflow-y:scroll;}
 }
 .show-episode{
     display: grid;
-    grid-auto-rows: minmax(40px, auto);
+    grid-auto-rows: minmax(40px, 50px);
     grid-template-columns: auto auto auto auto auto;
     height: 450px;
     overflow:auto;
+    margin: 0;
+    text-align: center;
     @include mobile{
         grid-auto-rows: minmax(30px, 20px);
         grid-template-columns: auto auto;
