--- a/frontend-zone/src/components/movie-grid/movie-grid.scss
+++ b/frontend-zone/src/components/movie-grid/movie-grid.scss
@@ -1,5 +1,44 @@
 @use "../../scss/" as *;
 
+
+.dropdown {
+    position: relative;
+    margin-top: 10px;
+    display: inline-block;
+    border: #f9f9f9;
+    top: 0px;
+    // background-color: #4CAF50;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    padding: 5px;
+    
+
+    @include mobile {
+        right: 1px;
+        top: 1px;
+    }
+    // background-color: #f9f9f9;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #545454;
+    height:150px;
+    overflow:scroll;
+    overflow-x:hidden;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(212, 212, 212, 0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .movie-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -17,7 +56,7 @@
 
 .movie-search {
     position: relative;
-    width: 100%;
+    // width: 100%;
     max-width: 500px;
 
     input {
@@ -35,4 +74,7 @@
             top: 1px;
         }
     }
+}
+.grid-container-check{
+    width: 50%;
 }
