--- a/frontend-zone/src/components/movie-grid/movie-grid.scss
+++ b/frontend-zone/src/components/movie-grid/movie-grid.scss
@@ -23,7 +23,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #545454;
+    background-color: rgba(0, 0, 0, 0.8);
     height:150px;
     overflow:scroll;
     overflow-x:hidden;
@@ -31,23 +31,42 @@
     border-radius: 5px;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(212, 212, 212, 0.2);
-    padding: 12px 16px;
+    padding: 10px 10px;
     z-index: 1;
+    @include tablet{
+        width: 170px;
+    }
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
+.grid-container-check1 {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: auto auto auto auto auto;
+    width: 500px;
+    gap: 10px;
+    @include tablet{
+        grid-template-columns: auto auto auto;
+        width: 150px;
+        margin-right: 10px;
+    }
+}
+
 .movie-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 60px;
+    grid-gap: 50px;
+    // margin-right: 10px;
     margin-bottom: 3rem;
     @include tablet {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        gap: 50px;
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        // gap: 50px;
+        grid-gap: 5px;
         margin-right: 10px;
+        // height: 100px;
     }
     &__loadmore {
         text-align: center;
@@ -75,6 +94,4 @@
         }
     }
 }
-.grid-container-check{
-    width: 50%;
-}
+
