--- a/frontend-zone/src/pages/detail/Detail.scss
+++ b/frontend-zone/src/pages/detail/Detail.scss
@@ -139,22 +139,31 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     grid-template-rows: auto auto;
     grid-template-columns: 70% auto;
     margin: 0px 0px 0px 0px;
-    
     gap: 10px;
+    @include mobile{
+        grid-template-rows: auto;
+        grid-template-columns: auto;
+    }
+}
+.container-video{
+    margin-left: 10px;
+    width: 100%;
+    height: 480px;
+    background-color: #000000;
+    border: #F5F5F5;
+    border-style: groove;
+    border-radius: 5px;
+    @include mobile{
+        height: 240px;
+    }
 }
 .background-video{
     position: relative;
-    height: 360px;
+    height: 100%;
     width: 100%;
-    right: 0px;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-    opacity: 1;
-    border-radius: $border-radius;
-    padding: 0px;
     @include mobile{
-        height: 150px;
+        height: 100%;
+        width: 100%;
     }
 }
 .show-poster-info{
@@ -165,6 +174,49 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     width: 100%;
     gap: 10px;
 }
+.group-link-download{
+    // display: grid;
+    // grid-template-rows: auto auto auto auto auto;
+    // grid-template-columns: auto auto auto auto auto;
+    
+    display: flex;
+    width: 70%;
+    overflow:auto;
+    margin: 0;
+    @include mobile{
+        margin-top: 30px;
+        margin-bottom: 0;
+        width: 100%;
+        height: 30px;
+        overflow:auto;
+    }
+}
+.dropdown-link {
+    position: relative;
+    display: inline-block;
+    border: 2px solid $white;
+    border-radius: 2px;
+    padding: 5px;
+    margin-left: 10px;
+    @include mobile{
+        margin-top: 30px;
+    }
+  }
+  
+.dropdown-content-link {
+    display: none;
+    position: absolute;
+    background-color: #272727;
+    width: 100%;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+.dropdown-link:hover .dropdown-content-link {
+    display: block;
+}
+
 .link-download{
     
     padding: 0.5rem 1.5rem;
@@ -174,15 +226,15 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     font-weight: 600;
     background-color: $body-bg;
     display: inline;
-    margin-right: 5px;
+    margin-right: 2px;
     margin-bottom: 5px;
     text-overflow: ellipsis;
     white-space: nowrap;
     text-align: center;
     @include mobile{
         margin-right: 5px;
-        
         height: 75%;
+        border-radius: 2px;
     }
     
 }
@@ -205,7 +257,11 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     }
     
 }
+
+
+
 .episode-list{
+    margin-left: 10px;
     width: 50px;
     height: 45px;
     // padding: 0.5rem 1.5rem;
@@ -222,9 +278,9 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     text-align: center;
     @include mobile{
         margin-right: 5px;
-        height: 75%;
-        width: 25px;
-        border-radius: 5px;
+        height: 50%;
+        width: 20px;
+        border-radius: 3px;
     }
     
 }
@@ -232,22 +288,6 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     height: 100%;
     margin-top: 20%;
     margin-bottom: 0;
-}
-.group-link-download{
-    // display: grid;
-    // grid-template-rows: auto auto auto auto auto;
-    // grid-template-columns: auto auto auto auto auto;
-    
-    display: flex;
-    width: 70%;
-    overflow:auto;
-    margin: 0;
-    @include mobile{
-        margin-bottom: 0;
-        width: 70%;
-        height: 30px;
-        overflow:auto;
-    }
 }
 .show-episode{
     display: grid;
@@ -258,9 +298,10 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     margin: 0;
     text-align: center;
     @include mobile{
-        grid-auto-rows: minmax(30px, 20px);
-        grid-template-columns: auto auto;
-        height: 140px;
+        display: flex;
+        margin-bottom: 0;
+        width: 100%;
+        height: 30px;
         overflow:auto;
     }
 }
