--- a/frontend-zone/src/pages/Admin/AdminMenu.scss
+++ b/frontend-zone/src/pages/Admin/AdminMenu.scss
@@ -3,6 +3,9 @@
 .movie-content{
     display: block;
     margin-bottom: 100px;
+    @include mobile{
+        margin-bottom: 200px;
+    }
 }
 
 .banner {
