--- a/frontend-zone/src/pages/Admin/AddAnime.scss
+++ b/frontend-zone/src/pages/Admin/AddAnime.scss
@@ -6,6 +6,9 @@
     background-size: cover;
     background-repeat: no-repeat;
 
+    @include mobile{
+        height: 25vh;
+    }
     &::before {
         content: "";
         position: absolute;
@@ -124,7 +127,7 @@
     padding-left: 0;
 }
 .add-group{
-    margin: 10px;
+    margin-left: 10px;
     margin-right: 30px;
 }
 
