--- a/frontend-zone/src/pages/detail/Detail.scss
+++ b/frontend-zone/src/pages/detail/Detail.scss
@@ -2,6 +2,7 @@
 
 .cursor-anime{
     // cursor: -webkit-grab; cursor: grab;
+    width: 100%;
     cursor: url('../../assets/sitama_cursor.png'), auto;
 }
 // .episode-list a:hover{
@@ -13,7 +14,9 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-
+    @include tablet{
+        margin-bottom: 100px;
+    }
     &::before {
         content: "";
         position: absolute;
@@ -133,18 +136,20 @@
     }
 }
 nav ul{height:300px; width:100%;}
-nav ul{overflow:hidden; overflow-y:scroll;}
-.show-video-eps{
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 70% auto;
-    margin: 0px 0px 0px 0px;
-    gap: 10px;
-    @include mobile{
-        grid-template-rows: auto;
-        grid-template-columns: auto;
-    }
-}
+nav ul{overflow:scroll; overflow-x:scroll;}
+// .show-video-eps{
+    // width: 100%;
+    // display: grid;
+    // grid-template-rows: auto auto;
+    // grid-template-columns: 70% auto;
+    // margin: 0px 0px 0px 0px;
+    // gap: 10px;
+    // @include mobile{
+    //     width: 100px;
+    //     grid-template-rows: auto;
+    //     grid-template-columns: auto;
+    // }
+// }
 .container-video{
     margin-left: 10px;
     width: 100%;
@@ -153,18 +158,15 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     border: #F5F5F5;
     border-style: groove;
     border-radius: 5px;
-    @include mobile{
+    @include tablet{
+        width: 100%;
         height: 240px;
     }
+    
 }
-.background-video{
-    position: relative;
-    height: 100%;
-    width: 100%;
-    @include mobile{
-        height: 100%;
-        width: 100%;
-    }
+.container-video .frame-video{
+    width:100%;
+    height:100%;
 }
 .show-poster-info{
     display: grid;
@@ -198,6 +200,8 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     border-radius: 2px;
     padding: 5px;
     margin-left: 10px;
+    
+    margin-top: 50px;
     @include mobile{
         margin-top: 30px;
     }
@@ -258,45 +262,25 @@ nav ul{overflow:hidden; overflow-y:scroll;}
     
 }
 
-
-
-.episode-list{
-    margin-left: 10px;
-    width: 50px;
-    height: 45px;
-    // padding: 0.5rem 1.5rem;
-    border: 2px solid $white;
-    border-radius: $border-radius;
-    font-size: 1rem;
-    font-weight: 600;
-    background-color: $body-bg;
-    display: grid;
-    margin-right: 1px;
-    margin-bottom: 1px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    text-align: center;
-    @include mobile{
-        margin-right: 5px;
-        height: 50%;
-        width: 20px;
-        border-radius: 3px;
-    }
-    
-}
 .item-eps{
     height: 100%;
     margin-top: 20%;
     margin-bottom: 0;
 }
 .show-episode{
-    display: grid;
-    grid-auto-rows: minmax(40px, 50px);
-    grid-template-columns: auto auto auto auto auto;
-    height: 450px;
-    overflow:auto;
-    margin: 0;
-    text-align: center;
+    
+    display: flex;
+    // display: grid;
+    // grid-auto-rows: minmax(40px, 50px);
+    // grid-template-columns: auto auto auto auto auto;
+    // max-height: 450px;
+    overflow:scroll;
+    // margin: 0;
+    // text-align: center;
+    margin-left: 10px;
+    width: 100%;
+    
+    margin-bottom: 0;
     @include mobile{
         display: flex;
         margin-bottom: 0;
@@ -305,7 +289,33 @@ nav ul{overflow:hidden; overflow-y:scroll;}
         overflow:auto;
     }
 }
+.episode-list{
+
+    width: 60px;
+    height: 45px;
+    padding: 6px;
+    border: 2px solid $white;
+    border-radius: $border-radius;
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: $body-bg;
+    display: grid;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-align: center;
+    @include mobile{
+        margin-right: 5px;
+        height: 20px;
+        // width: 20px;
+        padding: 2px;
+        border-radius: 3px;
+    }
+    
+}
 .scroll-episode{
+    // width: 30px;
     height: 10px;
 }
 /*
@@ -370,7 +380,8 @@ nav ul{overflow:hidden; overflow-y:scroll;}
 
 
 .info{
-    font-size: 1.5em;
+    // margin-top: 50px;
+    font-size: 1em;
     font-weight: 600;
     @include mobile{
         font-size: 0.2em;
