--- a/frontend-zone/src/components/footer/Footer.scss
+++ b/frontend-zone/src/components/footer/Footer.scss
@@ -6,7 +6,6 @@
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
-
     &__content {
         max-width: 1000px;
 
@@ -39,6 +38,7 @@
     }
 }
 .saran{
+    margin-left: 10px;
     position: absolute;
     bottom: 0;
     left: 0;
