--- a/frontend-zone/src/components/hero-slide/hero-slide.scss
+++ b/frontend-zone/src/components/hero-slide/hero-slide.scss
@@ -52,15 +52,18 @@
 
             & > * ~ * {
                 margin-top: 3rem;
+                @include mobile{
+                    margin-top: 1rem;
+                }
             }
 
             .title {
-                font-size: 3rem;
+                font-size: 2.5rem;
                 font-weight: 700;
                 line-height: 1;
 
                 @include tablet {
-                    font-size: 2rem;
+                    font-size: 1.5rem;
                 }
             }
 
