--- a/frontend-zone/src/pages/detail/Detail.scss
+++ b/frontend-zone/src/pages/detail/Detail.scss
@@ -2,12 +2,11 @@
 
 .cursor-anime{
     // cursor: -webkit-grab; cursor: grab;
+    display: block;
     width: 100%;
+    height: 100%;
     cursor: url('../../assets/sitama_cursor.png'), auto;
 }
-// .episode-list a:hover{
-//     cursor: url('../../assets/sitama.png'), auto;
-// }
 .banner {
     height: 50vh;
     position: relative;
@@ -100,7 +99,7 @@
         }
 
         & > * {
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
 
         .title {
@@ -220,10 +219,9 @@ nav ul{overflow:scroll; overflow-x:scroll;}
     border-radius: 2px;
     padding: 5px;
     margin-left: 10px;
-    
-    margin-top: 50px;
+    margin-top: 10px;
     @include mobile{
-        margin-top: 30px;
+        margin-top: 5px;
     }
   }
   
@@ -305,7 +303,7 @@ nav ul{overflow:scroll; overflow-x:scroll;}
         display: flex;
         margin-bottom: 0;
         width: 100%;
-        height: 30px;
+        // height: 30px;
         overflow:auto;
     }
 }
@@ -337,7 +335,7 @@ nav ul{overflow:scroll; overflow-x:scroll;}
 }
 .scroll-episode{
     // width: 30px;
-    height: 10px;
+    height: 100%;
 }
 /*
  *  STYLE 5
